@@ -5,3 +5,5 @@ Requires: pupmod-simp-logrotate < 6.0.0-0
 Requires: pupmod-simp-logrotate >= 5.0.0-0
 Requires: pupmod-simp-rsyslog < 7.0.0-0
 Requires: pupmod-simp-rsyslog >= 6.0.0-0
+Requires: pupmod-simp-simplib < 3.0.0-0
+Requires: pupmod-simp-simplib >= 2.1.0-0
