@@ -1,6 +1,6 @@
 {
   "name": "simp-aide",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "author": "SIMP Team",
   "summary": "manages AIDE",
   "license": "Apache-2.0",
@@ -23,6 +23,10 @@
     {
       "name": "simp/rsyslog",
       "version_requirement": ">= 6.0.0 < 7.0.0"
+    },
+    {
+      "name": "simp/simplib",
+      "version_requirement": ">= 2.1.0 < 3.0.0"
     }
   ],
   "operatingsystem_support": [
@@ -40,5 +44,6 @@
         "7"
       ]
     }
-  ]
+  ],
+  "data_provider": "hiera"
 }
