@@ -1,17 +1,14 @@
 require 'spec_helper'
-require 'fact_groups_helper'
 
 describe 'aide::logrotate' do
+  context 'supported operating systems' do
+    on_supported_os.each do |os, facts|
 
-  include FactGroups
-  FactGroups.factgroups.each do |factgroup|
-    let(:facts) {factgroup}
-    let(:pre_condition) { 'include "aide"' }
+      let(:facts) { facts }
+      let(:pre_condition) { 'include "aide"' }
 
-    it { should create_class('aide::logrotate') }
-
-    context "#{factgroup[:operatingsystem]} #{factgroup[:operatingsystemmajrelease]}" do
       it { should compile.with_all_deps }
+      it { should create_class('aide::logrotate') }
     end
   end
 end
