@@ -1,15 +1,14 @@
 require 'spec_helper'
-require 'fact_groups_helper'
 
 describe 'aide::set_schedule' do
+  context 'supported operating systems' do
+    on_supported_os.each do |os, facts|
 
-  include FactGroups
-  FactGroups.factgroups.each do |factgroup|
-    let(:facts) {factgroup}
+      let(:facts) { facts }
+      let(:pre_condition) { 'include "aide"' }
 
-    context "#{factgroup[:operatingsystem]} #{factgroup[:operatingsystemmajrelease]}" do
-      it { should create_class('aide::set_schedule') }
       it { should compile.with_all_deps }
+      it { should create_class('aide::set_schedule') }
       it { should contain_cron('aide_schedule') }
     end
   end
