@@ -1,6 +1,6 @@
 require 'spec_helper'
 
-describe 'aide::default_rules' do
+describe 'aide::syslog' do
   context 'supported operating systems' do
     on_supported_os.each do |os, facts|
 
@@ -8,8 +8,8 @@ describe 'aide::default_rules' do
       let(:pre_condition) { 'include "aide"' }
 
       it { should compile.with_all_deps }
-      it { should create_class('aide::default_rules') }
-      it { should create_file('/etc/aide.conf.d/default.aide').with_content(/\/bin\s+NORMAL/) }
+      it { should create_class('aide::syslog') }
+      it { should contain_class('rsyslog') }
     end
   end
 end
